--- a/src/app/index.html
+++ b/src/app/index.html
@@ -23,46 +23,50 @@
       </div>
     </nav>
 
-    <div class="wallpaper-container">
-      <div class="wallpaper"></div>
-      <div class="gradient-box"></div>
-      <div class="wallpaper-items">
-        <h1 class="title">STRINOVA</h1>
-        <h2 class="subtitle">The New World</h2>
-        <a class="download" href="https://www.strinova.com/en-US">DOWNLOAD HERE</a>
-      </div>
-    </div>
-
-    <main class="main-content">
-      <div class="about-container">
-        <div class="about-lore">
-          <div class="titles">
-            <p class="about-title"><b>ABOUT</b></p>
-            <p class="lore-title"><b>LORE</b></p>
-          </div>
-          <div class="infomation-text">
-            <p class="about-text">Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released on
-              November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.</p>
-            <p class="lore-text">Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
-              "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a
-              new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order;
-              The Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.</p>
-          </div>
-          <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp">
+    <main>
+      <div class="wallpaper-container">
+        <div class="wallpaper"></div>
+        <div class="gradient-box"></div>
+        <div class="wallpaper-items">
+          <h1 class="title">STRINOVA</h1>
+          <h2 class="subtitle">The New World</h2>
+          <a class="download" href="https://www.strinova.com/en-US">DOWNLOAD HERE</a>
         </div>
       </div>
-      <div class="gallery-container">
-        <div class="gallery">
-          <div class="content-area">
-            <h1 class="agent-title">AGENTS</h1>
-            <h1 id="gallery-title">P.U.S</h1>
-            <p id="gallery-description">
-              The official government of the new world, maintaining order while striving to find a cure for Collapse
-              Syndrome
+      <div class="about-lore">
+        <div class="about-wallpaper-container">
+          <img class="about-wallpaper" src="/public/bg/Strinova Background 2.jpg" />
+        </div>
+        <div class="about-information">
+          <div>
+            <h2>ABOUT</h2>
+            <p>
+              Strinova is a game developed by Day1 Studio of iDreamSky using Unreal Engine 4. It was globally released
+              on November 21 2025. Strinova is an anime-style third-person shooterwith many unique agents and Mechanics.
             </p>
           </div>
+          <div>
+            <h2>LORE</h2>
+            <p>
+              Following the catastrophe of the old world, humanity opted to migrate to a multidimensional realm known as
+              "Strinova", gaining the "Stringify" ability to shift between 3D and 2D forms. This evolution ushered in a
+              new Golden Age. Diverging ideologies led to the formation of factions: P.U.S, upholding government order;
+              The Scissors, aiming to return to the old world; and Urbino, delving into the new world's potential.
+            </p>
+          </div>
+        </div>
+        <img class="kanami-emoji" src="/public/emojis/Kanami Emoji.webp" />
+      </div>
+      <div class="gallery-container">
+        <div class="gallery-shadow"></div>
+        <div class="gallery">
           <div class="image-row">
-            <img src="/public/bg/pus-icon-removebg-preview.png" alt="Gallery Image 1" data-set="1" class="gallery-image" />
+            <img
+              src="/public/bg/pus-icon-removebg-preview.png"
+              alt="Gallery Image 1"
+              data-set="1"
+              class="gallery-image"
+            />
             <img
               src="/public/bg/scissors-icon-unclcikedremovebg-preview.png"
               alt="Gallery Image 2"
@@ -76,12 +80,22 @@
               class="gallery-image"
             />
           </div>
+          <div class="content-area">
+            <h1 class="agent-title">AGENTS</h1>
+            <h1 id="gallery-title">P.U.S</h1>
+            <p id="gallery-description">
+              The official government of the new world, maintaining order while striving to find a cure for Collapse
+              Syndrome
+            </p>
+          </div>
         </div>
       </div>
-      <script src="javascript-mainpage.js"></script>
+    </main>
+
     <footer>
       <span><h6>henryphanisthebest@gmail.com</h6></span>
       <span><h6>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</h6></span>
     </footer>
+    <script src="javascript-mainpage.js"></script>
   </body>
 </html>
