--- a/src/app/agents/agent.css
+++ b/src/app/agents/agent.css
@@ -1,12 +1,16 @@
 body {
     overflow-x: hidden;
 }
+
 .agent {
     position: relative;
 }
+
 .background-top {
     background-image: url(/public/bg/Wallpaper_深空开拓.webp);
-    background-size: 95.2rem;
+    background-size: cover;
+    background-position-y: 50px;
+    background-repeat: no-repeat;
     width: 100%;
     height: 50rem;
     position: absolute;
