--- a/src/app/agents/page.html
+++ b/src/app/agents/page.html
@@ -17,11 +17,22 @@
         <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
-    <div class="agents"></div>
-      <div class="background-top"></div>
-      <div id="P.U.S">
+    <div class="background-top">
+    <div class="gradient-box"></div>
+    <div class="agents">
+    <div class="titles">
+      <h1 class="agent2"> AGENTS</h1>
+      <div class="subtitles">
+        <p class="controller">CONTROLLER</p>
+        <p class="duelist">DUELIST</p>
+        <p class="vanguard">VANGUARD</p>
+        <p class="support">SUPPORT</p>
+        <p class="senitinel">SENITINEL</p>
+      </div>
+    </div>
+      <div class="pus">
         <a href="./routes/Michele.html">
-          <img src="/public/agents/michele/Michele.webp" alt="Michele" width="400" loading="lazy" />
+          <img src="/public/agents/michele/Michele.webp" alt="Michele" width="400" loading="lazy" id="Michele"/>
         </a>
         <a href="./routes/Kokona.html">
           <img src="/public/agents/kokona//1-ce427e63.png" alt="Kokona" width="400" loading="lazy" />
@@ -86,9 +97,12 @@
         </a>
       </div>
     </div>
+    </div>
+<!--
     <footer>
       <span>henryphanisthebest@gmail.com</span>
       <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
     </footer>
   </body>
-</html>
+</html>  
+-->
