--- a/src/app/agents/agent.css
+++ b/src/app/agents/agent.css
@@ -1,9 +1,11 @@
 body {
     overflow-x: hidden;
+    background-color: black;
 }
 
-.agent {
-    position: relative;
+.agents {
+    position: absolute
+
 }
 
 .background-top {
@@ -11,7 +13,43 @@ body {
     background-size: cover;
     background-position-y: 50px;
     background-repeat: no-repeat;
+    background-position: center;
     width: 100%;
     height: 50rem;
+    position: relative;
+}
+
+.gradient-box {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .6),  rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1),rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1),rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgb(0, 0, 0, 1));
     position: absolute;
+    width: 100%;
+    height: 550rem;
+}
+
+.titles {
+    color: white;
+    padding-left: 40px;
+    font-family: Bahnschrift Condensed;
+    font-size: 1.5rem;
+}
+
+.agent2 {
+    margin-top: 200px;
+    border-bottom: white solid;
+    margin-right: 78rem;
+}
+
+.subtitles {
+    display: flex;
+    flex: row;
+    gap: 10rem;
+    font-size: 1.6rem;
+    color: #939397;
+
+}
+
+.senitnel:hover, .vanguard:hover, .support:hover, .controller:hover, .duelist:hover {
+    color: white;
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
