--- a/src/app/agents/routes/Michele.html
+++ b/src/app/agents/routes/Michele.html
@@ -11,22 +11,24 @@
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <div><a href="/src/app/agents/page.html">AGENTS</a></div>
+        <div><a href="/src/app/maps/page.html">MAPS</a></div>
+        <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
-    <div id="Michele-Descripition">
+    <div id="michele">
       <img src="/public/agents/michele/Michele.webp" alt="Michele" width="400" />
       <h1>Michele</h1>
       <h3>Role: Senitinel</h3>
-      <h2>Background</h2>
-      <p>
-        Michele is a rookie P.U.S investigator in the world of strinova. She is a gamer that applies her gaming to her
-        job as a investigtor. Michele is guided by her seniors Kokona and Nobunaga. Michele loves cat and uses cat
-        robots to fight the enemies, these are also known as Pawtector and Mighty Meow. She wishes to become a admired
-        hero like her father who under unknown circumstances has fallen for collpase syndrome.
-      </p>
+      <div id="about">
+        <h2>Background</h2>
+        <p>
+          Michele is a rookie P.U.S investigator in the world of strinova. She is a gamer that applies her gaming to her
+          job as a investigtor. Michele is guided by her seniors Kokona and Nobunaga. Michele loves cat and uses cat
+          robots to fight the enemies, these are also known as Pawtector and Mighty Meow. She wishes to become a admired
+          hero like her father who under unknown circumstances has fallen for collpase syndrome.
+        </p>
+       </div>
     </div>
     <hr />
     <div id="Michele-Skills">
