--- a/src/app/agents/agent.css
+++ b/src/app/agents/agent.css
@@ -19,11 +19,12 @@ body {
     position: relative;
 }
 
+
 .gradient-box {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .6),  rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1),rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1),rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgb(0, 0, 0, 1));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .6), rgb(0, 0, 0, 1));
     position: absolute;
     width: 100%;
-    height: 550rem;
+    height: 50rem;
 }
 
 .titles {
@@ -33,23 +34,84 @@ body {
     font-size: 1.5rem;
 }
 
+.kanami-emoji {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    left: 210px;
+    top: 180px;
+    transform: rotate(15deg);
+}
+
 .agent2 {
     margin-top: 200px;
     border-bottom: white solid;
-    margin-right: 78rem;
+    margin-right: 70rem;
 }
 
 .subtitles {
     display: flex;
     flex: row;
-    gap: 10rem;
+    gap: 5rem;
     font-size: 1.6rem;
     color: #939397;
-
+    margin-top: -30px;
+    font-weight: 1000;
+    height: 100px;
 }
 
-.senitnel:hover, .vanguard:hover, .support:hover, .controller:hover, .duelist:hover {
+.all-agents {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 20rem));
+    padding-left: 130px;
+}
+
+.senitnel:hover, .vanguard:hover, .support:hover, .controller:hover, .duelist:hover, .all:hover {
     color: white;
     cursor: pointer;
     transition: all 0.5s ease;
+}
+
+footer {
+    top: 90rem;
+}
+
+/** things i might need for java at the bottom**/
+
+
+
+#headshot {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    width: 230px;
+    margin-right: 400px;
+    padding-top: 20px;
+}
+
+#headshot img {
+    width: 15rem;
+}
+
+#headshot a {
+    text-decoration: none;
+}
+
+#headshot p {
+    color: rgb(117, 107, 107);
+    background-color: white;
+    margin-top: -5px;
+    font-family: Bahnschrift Condensed;
+    padding-left: 10px;
+    padding-bottom: 6px;
+    padding-top: 10px;
+    font-size: 1.3rem;
+    text-decoration: none;
+    width: 230px;
+    font-weight: 1000;
+    border-radius: 0px 0px 2px 2px ;
+}
+
+#headshot:hover {
+    size: 200rem;
 }
