--- a/src/app/agents/page.html
+++ b/src/app/agents/page.html
@@ -17,144 +17,169 @@
         <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
-    <div class="background-top">
-    <div class="gradient-box"></div>
-    <div class="agents">
-    <div class="titles">
-      <h1 class="agent2"> AGENTS</h1>
-      <img src="/public/emojis/kanami-emoji-2.webp" class="kanami-emoji">
-      <div class="subtitles">
-        <p class="all" data-role="all"> ALL </p>
-        <p class="controller" data-role="controller">CONTROLLER</p>
-        <p class="duelist" data-role="dueist">DUELIST</p>
-        <p class="vanguard" data-role="vanguard">VANGUARD</p>
-        <p class="support" data-role="support">SUPPORT</p>
-        <p class="senitinel" data-role="senitinel">SENITINEL</p>
+    <div>
+      <div class="background-top"></div>
+      <div class="gradient-box"></div>
+      <div class="characters-wrapper">
+        <div class="titles">
+          <h1 class="agent2">AGENTS</h1>
+          <img src="/public/emojis/kanami-emoji-2.webp" class="kanami-emoji" />
+        </div>
+        <div class="subtitles">
+          <p class="active" data-role="all">ALL</p>
+          <p data-role="controller">CONTROLLER</p>
+          <p data-role="duelist">DUELIST</p>
+          <p data-role="vanguard">VANGUARD</p>
+          <p data-role="support">SUPPORT</p>
+          <p data-role="senitinel">SENITINEL</p>
+        </div>
+        <div class="characters">
+          <div id="headshot" data-role="senitinel">
+            <a href="./routes/Michele.html">
+              <img
+                src="/public/agents/michele/michele-headshot.png"
+                alt="Michele"
+                width="400"
+                loading="lazy"
+                data-name="MICHELE"
+              />
+              <p>MICHELE</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="support">
+            <a href="./routes/Kokona.html">
+              <img
+                src="/public/agents/kokona/kokona-headshot.png"
+                alt="Kokona"
+                width="400"
+                loading="lazy"
+                data-name="KOKONA"
+              />
+              <p>KOKONA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="controller">
+            <a href="./routes/Yugiri.html">
+              <img
+                src="/public/agents/yugiri/yugiri-headshot.png"
+                alt="Yugiri"
+                width="400"
+                loading="lazy"
+                data-name="TUGIRI"
+              />
+              <p>YUGIRI</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="senitinel">
+            <a href="./routes/Nobunaga.html">
+              <img
+                src="/public/agents/nobunaga/nobunaga-headshot.png"
+                alt="Nobunaga"
+                width="400"
+                loading="lazy"
+                data-name="NOBUNAGA"
+              />
+              <p>NOBUNAGA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="senitinel">
+            <a href="./routes/Leona.html">
+              <img src="/public/agents/leona/leona-headshot.png" alt="Leona" width="390" loading="lazy" />
+              <p>LEONA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="controller">
+            <a href="./routes/Yvette.html">
+              <img src="/public/agents/yvette/yvette-headshot.png" alt="Yvette" width="390" loading="lazy" />
+              <p>YVETTE</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="duelist">
+            <a href="./routes/Flavia.html">
+              <img src="/public/agents/flavia/flavia-headshot.png" alt="Flavia" width="400" loading="lazy" />
+              <p>FLAVIA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="senitinel">
+            <a href="./routes/Audrey.html">
+              <img src="/public/agents/audrey/audrey-headshot.png" alt="Audrey" width="420" loading="lazy" />
+              <p>AUDREY</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="support">
+            <a href="./routes/Celestia.html">
+              <img src="/public/agents/celestia/celestia-headshot.png" alt="Celestia" width="400" loading="lazy" />
+              <p>CELESTIA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="vanguard">
+            <a href="./routes/Galatea.html">
+              <img src="/public/agents/galatea/galatea-headshot.png" alt="Galatea" width="400" loading="lazy" />
+              <p>GALATEA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="duelist">
+            <a href="./routes/Fuschia.html">
+              <img src="/public/agents/fuschia/fuschia-headshot.png" alt="Fushcia" width="400" loading="lazy" />
+              <p>FUSCHIA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="controller">
+            <a href="./routes/Maddelena.html">
+              <img src="/public/agents/maddelena/maddelena-headshot.png" alt="Maddelena" width="400" loading="lazy" />
+              <p>MADDELENA</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="duelist">
+            <a href="./routes/Bai Mo.html">
+              <img src="/public/agents/baimo/baimo-headshot.png" alt="Bai Mo" width="400" loading="lazy" />
+              <p>BAI MO</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="controller">
+            <a href="./routes/Reiichi.html">
+              <img src="/public/agents/reiichi/reiichi-headshot.png" alt="Reiichi" width="400" loading="lazy" />
+              <p>REICCHI</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="duelist">
+            <a href="./routes/Ming.html">
+              <img src="/public/agents/ming/ming-headshot.png" alt="Ming" width="400" loading="lazy" />
+              <p>MING</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="vanguard">
+            <a href="./routes/Kanami.html">
+              <img src="/public/agents/kanami/kanami-headshot.png" alt="Kanami" width="400" loading="lazy" />
+              <p>KANAMI</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="vanguard">
+            <a href="./routes/Lawine.html">
+              <img src="/public/agents/lawine/lawine-headshot.png" alt="Lawine" width="400" loading="lazy" />
+              <p>LAWINE</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="controller">
+            <a href="./routes/Meredith.html">
+              <img src="/public/agents/meredith/meredith-headshot.png" alt="Meredith" width="420" loading="lazy" />
+              <p>MEREDITH</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="support">
+            <a href="./routes/Fragrans.html">
+              <img src="/public/agents/fragrans/fragrans-headshot.png" alt="Fragrans" width="390" loading="lazy" />
+              <p>FRAGRANS</p>
+            </a>
+          </div>
+          <div id="headshot" data-role="duelist">
+            <a href="./routes/Eika.html">
+              <img src="/public/agents/eika/eika-headshot.png" alt="Eika" width="400/>" loading="lazy" />
+              <p>EIKA</p>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-      <div class="all-agents">
-        <div id="headshot" data-name="MICHELE">
-          <a href="./routes/Michele.html">
-            <img src="/public/agents/michele/michele-headshot.png" alt="Michele" width="400" loading="lazy" data-name="MICHELE"/>
-            <p>MICHELE</p>
-          </a>
-       </div>
-       <div id="headshot">
-          <a href="./routes/Kokona.html">
-            <img src="/public/agents/kokona/kokona-headshot.png" alt="Kokona" width="400" loading="lazy" data-name="KOKONA"/>
-            <p>KOKONA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Yugiri.html">
-            <img src="/public/agents/yugiri/yugiri-headshot.png" alt="Yugiri" width="400" loading="lazy" data-name="TUGIRI"/>
-            <p>YUGIRI</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Nobunaga.html">
-            <img src="/public/agents/nobunaga/nobunaga-headshot.png" alt="Nobunaga" width="400" loading="lazy" data-name="NOBUNAGA"/>
-            <p>NOBUNAGA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Leona.html">
-            <img src="/public/agents/leona/leona-headshot.png" alt="Leona" width="390" loading="lazy" />
-            <p>LEONA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Yvette.html">
-            <img src="/public/agents/yvette/yvette-headshot.png" alt="Yvette" width="390" loading="lazy" />
-            <p>YVETTE</p>
-          </a>
-        </div>
-        <div id="headshot">
-        <a href="./routes/Flavia.html">
-          <img src="/public/agents/flavia/flavia-headshot.png" alt="Flavia" width="400" loading="lazy" />
-          <p>FLAVIA</p>
-        </a>
-       </div>
-       <div id="headshot">
-          <a href="./routes/Audrey.html">
-            <img src="/public/agents/audrey/audrey-headshot.png" alt="Audrey" width="420" loading="lazy" />
-            <p>AUDREY</p>
-          </a>
-       </div>
-        <div id="headshot">
-          <a href="./routes/Celestia.html">
-            <img src="/public/agents/celestia/celestia-headshot.png" alt="Celestia" width="400" loading="lazy" />
-            <p>CELESTIA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Galatea.html">
-            <img src="/public/agents/galatea/galatea-headshot.png" alt="Galatea" width="400" loading="lazy" />
-            <p>GALATEA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Fuschia.html">
-            <img src="/public/agents/fuschia/fuschia-headshot.png" alt="Fushcia" width="400" loading="lazy" />
-            <p>FUSCHIA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Maddelena.html">
-            <img src="/public/agents/maddelena/maddelena-headshot.png" alt="Maddelena" width="400" loading="lazy" />
-            <p>MADDELENA</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Bai Mo.html">
-            <img src="/public/agents/baimo/baimo-headshot.png" alt="Bai Mo" width="400" loading="lazy" />
-            <p>BAI MO</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Reiichi.html">
-            <img src="/public/agents/reiichi/reiichi headshot.png" alt="Reiichi" width="400" loading="lazy" />
-            <p>REICCHI</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Ming.html">
-            <img src="/public/agents/ming/ming-headshot.png" alt="Ming" width="400" loading="lazy" />
-            <p>MING</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Kanami.html">
-            <img src="/public/agents/kanami/kanami-headshot.png" alt="Kanami" width="400" loading="lazy"/>
-            <p>KANAMI</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Lawine.html">
-            <img src="/public/agents/lawine/lawine-headshot.png" alt="Lawine" width="400" loading="lazy" />
-            <p>LAWINE</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Meredith.html">
-            <img src="/public/agents/meredith/meredith-headshot.png" alt="Meredith" width="420" loading="lazy" />
-            <p>MEREDITH</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Fragrans.html">
-            <img src="/public/agents/fragrans/fragran-headshot.png" alt="Fragrans" width="390" loading="lazy" />
-            <p>FRAGRANS</p>
-          </a>
-        </div>
-        <div id="headshot">
-          <a href="./routes/Eika.html">
-            <img src="/public/agents/eika/eika-headshot.png" alt="Eika" width="400/>" loading="lazy" />
-            <p>EIKA</p>
-          </a>
-        </div>
-      </div>
-    </div>
     </div>
     <script src="javascript-agent.js"></script>
     <footer>
@@ -162,4 +187,4 @@
       <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
     </footer>
   </body>
-</html>  
+</html>
